# openmud

./: .env.example  .gitignore  AGENTS.md  API.md  CODE_OF_CONDUCT.md  DNS-SQUARESPACE.md  LICENSE  PRELAUNCH.md  README.md  about.html  buildplan.md  calculators.html  chat.html  companies.html  documentation.html  index.html  package-lock.json  package.json  playwright.config.ts  playwright.prelaunch.config.ts  pyproject.toml  pytest.ini  resources.html  vercel.json
.github/: CONTRIBUTING.md  SECURITY.md  pull_request_template.md
api/: chat.js  feedback.js  health.js  ocr-image.js  predict.js  proposal.js  schedule.js  search.js  tool-metrics.js
assets/: README.md
config/: env.example
css/: styles.css
data/: site-content.json
desktop/: .env.example  .env.signing.example  README.md  bid-finder.js  bid-watcher.js  data-sync.js  file-scanner.js  intent-router.js  mail-attachments.js  main.js  package-lock.json  package.json  preload.js  storage.js  udot-scraper.js
docs/: API.md  AUTH_FLOW.md  DNS-SETUP.md  OSS_SOURCES.md  PRELAUNCH_QA.md  QUALITY_CHECKLIST.md  ROADMAP.md  SITE_NAVIGATION.md  SYNC_OWNERSHIP.md
js/: app.js
logo/: README.md
mud1/: README.md  package.json
public/: about.html  calculators.html  chat.html  companies.html  documentation.html  iija-infrastructure-demand.html  index.html  innovators.html  resources.html  site.webmanifest  tools.html
relay/: install.sh  openmud-agent.js  package-lock.json  package.json  server.js
scripts/: README.md  after-pack.js  build-and-verify.sh  build-signed-local.js  dev-and-test.sh  dev-from-symlink.sh  dev-wrapper.sh  generate-apple-jwt.js  (+7 more)
(+195 files in other folders)
